# SudokuSolver

./: .gitignore  CMakeLists.txt  README.md
Solver/: CMakeLists.txt  main.cpp
Sudoku/: Board.cpp  Board.h  BoardHasher.cpp  BoardHasher.h  CMakeLists.txt  Cell.cpp  Cell.h  Common.h  FileParser.cpp  FileParser.h  Solver.cpp  Solver.h  Utils.cpp  Utils.h
Tests/: BoardTests.cpp  CMakeLists.txt  CellTests.cpp  FileParserTests.cpp  FreeFunctions.cpp
Tests/FileParserTestInput/: BadInput.txt  Good.txt  Incomplete.txt  Large16x16.txt  small4x4.txt
solver/: CMakeLists.txt  Solver.cpp  Solver.h  main.cpp
